--- a/AgeCalculator/.project
+++ b/AgeCalculator/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LabTask6</name>
+	<name>AgeCalculator</name>
 	<comment></comment>
 	<projects>
 	</projects>
